# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.rs  rust-toolchain.toml  spec.yaml
.cargo/: config.toml
.github/workflows/: deploy.yml  rust-clippy.yml  rust.yml
.sqlx/: query-7e26944dd61b9b6517a631f70f16bfaee92104bd6f1b3f5a4c4cba9aeb389276.json  query-a3d979b2febbfb2b36da7e410a39a8176dae69043ac161b5c6cf211399d16a23.json  query-b85af99361444659574e1fef59236553a230df6bd0e0ffd833b3c178d5709c04.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20231009023436_create_subscriptions_table.sql  20231029185722_make_status_not_null_in_subscriptions.sql  20231105184414_seed_user.sql  20250123035555_add_contacts.sql
scripts/: init_db.sh  init_redis.sh
src/: app.rs  authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/core/: base.html
src/domain/: contact_message.rs  mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs  user_email.rs  user_name.rs  verified_contact_form.rs
src/idempotency/: persistence.rs
src/routes/: contact.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.tsx  theme.tsx
ui/src/components/: ContactDialog.tsx  Copyright.tsx  MenuItemSelected.tsx
ui/src/components/app-bar/: ResponsiveAppBar.tsx
ui/src/components/constants/: constants.ts
ui/src/components/footer/: AppFooter.tsx
ui/src/components/pages/: Education.tsx  Experience.tsx  OpenSource.tsx  Projects.tsx  Skills.tsx  Summary.tsx
