[package]
name = "zero2prod"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = "1"
actix-session = { version = "0.9", features = ["redis-rs-tls-session"] }
actix-web = "4"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-web-lab = "0.20"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"]}
config = "0.14"
htmlescape = "0.3"
log = "0.4"
rand = { version = "0.8", features = ["std_rng"]}
secrecy = {  version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4.2"
thiserror = "1"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
urlencoding = "2"
unicode-segmentation = "1.10.1"
uuid = {version = "1.4", features = ["v4", "serde"]}
validator = "0.17"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = [
    "json",
    "rustls-tls",
    "cookies"
]

[dev-dependencies]
claims = "0.7"
fake = "~2.3"
linkify = "0.10"
once_cell = "1.18"
quickcheck = "0.9"
quickcheck_macros = "0.9"
serde_json = "1.0"
wiremock = "0.5"