[package]
name = "zero2prod"
version = "0.1.5"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
ammonia = "4"
anyhow = "1"
actix-files = "0.6"
actix-session = { version = "0.10", features = ["redis-session-rustls"] }
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
argon2 = { version = "0.5", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
log = "0.4"
rand = { version = "0.8", features = ["std_rng"]}
rustls = "0.23"
secrecy = {  version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4.2"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.1"
uuid = {version = "1", features = ["v4", "v5", "serde"]}
validator = "0.18"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = [
    "json",
    "rustls-tls",
    "cookies"
]

[dev-dependencies]
claims = "0.7"
fake = "2.9"
linkify = "0.10"
quickcheck = "1.0"
quickcheck_macros = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
wiremock = "0.6"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
